--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <div class="fourth-div">
       <div class="col-1">
         <img src="img/bg-portafolio.jpg">
-        
+          <h2><a href="http://www.alexmanso.cl" target="_blank">www.alexmanso.cl</a></h2>
       </div>
       
   </div>
